--- a/TPSMetaTest/TPSMetaTest.csproj
+++ b/TPSMetaTest/TPSMetaTest.csproj
@@ -53,6 +53,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Data\DataDefinition.cs" />
+    <Compile Include="Data\Protocol.cs" />
     <Compile Include="Data\Segment.cs" />
     <Compile Include="Forms\AboutForm.cs">
       <SubType>Form</SubType>
