--- a/TPSMetaTest/app.config
+++ b/TPSMetaTest/app.config
@@ -4,6 +4,9 @@
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="TPSMetaTest.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="TPSMetaTest.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <applicationSettings>
         <TPSMetaTest.Properties.Settings>
@@ -19,6 +22,16 @@
             <setting name="SEG_CLICK_COLOR" serializeAs="String">
                 <value>CornflowerBlue</value>
             </setting>
+            <setting name="SEG_HEIGHT_MINIMIZED" serializeAs="String">
+                <value>26</value>
+            </setting>
         </TPSMetaTest.Properties.Settings>
     </applicationSettings>
+    <userSettings>
+        <TPSMetaTest.Properties.Settings>
+            <setting name="SEG_HEIGHT_EXPANDED" serializeAs="String">
+                <value>78</value>
+            </setting>
+        </TPSMetaTest.Properties.Settings>
+    </userSettings>
 </configuration>
